Add JWT auth. Need to extract key somewhere else.